did some minor changes and fixed priority of images as it took 4 seconds to appear on mobile devices

--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -33,6 +33,7 @@
     object-fit: cover;
 
 }
+
 .main_card_container_2 {
     width: 400px;
     height: 320px;
@@ -53,6 +54,8 @@
 .main_image_background{
     width: 100%;
     height: 100%;
+    transition: .7s ease;
+
 }
 .main_image_background:after{
     content: '';
@@ -65,7 +68,7 @@
     z-index: 2;
 }
 .main_image_background:hover{
-    transition: .8s ease-in-out ;
+    transition: .9s ease;
     transform: scale(1.05);
     transform-origin: 50% 50%;
 
